@@ -7,6 +7,7 @@ pts-core: Only show Apple options when running on macOS
 ob_auto_compare: Intelligently choose more relevant reference results
 phodevi: macOS CPU monitoring support
 phodevi: Support for reading WattsUp Pro power meter data directly without utility using WATTS_UP_METER=<USB TTY>
+phodevi: Report Google Compute Engine machine type as part of motherboard string
 
 Phoronix Test Suite 10.0.1
 21 October 2020
